--- a/kimyongmin/project01/public/index.html
+++ b/kimyongmin/project01/public/index.html
@@ -27,6 +27,11 @@
     
     <title>React App</title>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=28e7a774528580076413be26415de345&libraries=clusterer"></script>
+    <link
+  href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap"
+  rel="stylesheet"
+/>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
